Changes after KPresenter 1.3.1
==============================
- Turning off the "Create backup file" option now works.

Changes after KPresenter 1.3
============================
- Fixed possible crash in presentation mode if not all slides are shown
- Fixed wrong clipping of fullscreen presentation (#73943)
- Fixed show the duration for the correct page if not all slides are shown
- Fixed crash in infinite loop presentation mode when first slide is not shown
- Fixed speed of automatic presentation (it was reversed) (#69260)
- Fixed wrong positioning of text when using "Vertical Alignment" (#72224)
- Fixed redrawing of lines in drawing mode in case of a repaint event
- Save HTML Slideshow export settings does not add extension to filenames (#76287)

Changes:
- If a page is shown more than once during a presentation, add the time for
  the duration instead of showing only the last duration.

Changes after KPresenter 1.3 RC1
================================
- during a presentation variables on the sticky page were not updated (#67515)
- font sizes are lost after reload (#72120)
- duplicate slide doesn't exactly duplicate it, some formats are lost (#72126)
- text style is not used if text field is empty (#72129)


Changes after KPresenter 1.3 beta 4
===================================
Fixes:
- Fixed When resizing a frame it does not snap to the grid (#63032)
- Fixed after resize/undo size of object is not the same
- Fixed after move/undo position of object is not the same
- Fixed resizing of poly line objects
- Fixed after reload of some objects moved up a little bit
- Fixed moving with key left used y grid
- Fixed header/footer moved in undo

Changes after KPresenter 1.3 beta 3
===================================
Fixes:
- Fixed cursor not blinking in some cases
- Fixed "blinking cursor erases formatting characters" bug
- "Adjust object to contents" works as intended now
- Purpose of the 'Notebar' is unknown (#63037)