@@ -1,6 +1,7 @@
 Changes after KPresenter 1.3.1
 ==============================
 - Turning off the "Create backup file" option now works.
+- Fixed loading of the "following style" setting
 
 Changes after KPresenter 1.3
 ============================
